Fix ratingtooltip bubble alignment

--- a/Ashish_P/perview/src/styles/stylesheets/Header/mobile.scss
+++ b/Ashish_P/perview/src/styles/stylesheets/Header/mobile.scss
@@ -50,6 +50,7 @@
     letter-spacing: 0.02em;
     display: flex;
     justify-content: center;
+    cursor: pointer;
   }
 }
 
