--- a/Ashish_P/perview/src/styles/stylesheets/createperviewmodal.scss
+++ b/Ashish_P/perview/src/styles/stylesheets/createperviewmodal.scss
@@ -199,7 +199,8 @@ $lines-to-show: 4;
       top: -50px;
       padding: 0 16px;
       height: 25px;
-      transform: translateX(-31%);
+      transform: translateX(-35%);
+      margin-left: 4px;
       background: #DAB559;
       color: white;
       border-radius: 1em;
