--- a/Ashish_P/perview/src/styles/stylesheets/usernav.scss
+++ b/Ashish_P/perview/src/styles/stylesheets/usernav.scss
@@ -64,7 +64,6 @@
   }
 
   &img {
-    width: 100%;
     overflow: hidden;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
@@ -79,6 +78,7 @@
     // border-bottom: 1px solid #ddd;
     box-shadow: 0 3px 2px -2px rgba(200,200,200,0.2);
     padding: 1em;
+    cursor: pointer;
   }
 
   &option-text {
